[package]
name = "another-rxrust"
authors = ["Terukazu Inoue <terukazu.inoue@codianz.com>"]
categories = ["asynchronous"]
description = "another implementation of `rxRust`."
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/another-rxrust/"
homepage = "https://github.com/CODIANZ/another-rxrust"
repository = "https://github.com/CODIANZ/another-rxrust"
keywords = ["reactivex", "rx", "rxrust"]
version = "0.0.23"


[dependencies]
anyhow = { version = "1", optional = true }

[features]
anyhow = ["dep:anyhow"]

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }