[package]
name = "another-rxrust"
authors = ["Terukazu Inoue <terukazu.inoue@codianz.com>"]
categories = ["asynchronous"]
description = "A different implementation than `rxRust` for easier use of `ReactiveX` in `Rust`."
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/another-rxrust/"
homepage = "https://github.com/CODIANZ/another-rxrust"
repository = "https://github.com/CODIANZ/another-rxrust"
keywords = ["reactivex", "rx", "rxrust", "asynchronous"]
version = "0.0.27"


[dependencies]
anyhow = { version = "1", optional = true }

[features]
anyhow = ["dep:anyhow"]

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }