[package]
name = "another-rxrust"
authors = ["Terukazu Inoue <terukazu.inoue@codianz.com>"]
categories = ["asynchronous"]
description = "A different implementation than `rxRust` for easier use of `ReactiveX` in `Rust`."
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/another-rxrust/"
homepage = "https://github.com/CODIANZ/another-rxrust"
repository = "https://github.com/CODIANZ/another-rxrust"
keywords = ["reactivex", "rx", "rxrust", "asynchronous"]
version = "0.0.42"

[dependencies]
wasm-bindgen = { version = "0.2.83", optional = true }
web-sys = { version = "0.3.60", features = ["Window"], optional = true }

[features]
web = ["dep:wasm-bindgen", "dep:web-sys"]

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
tokio = { version = "1.27", features = ["full"] }
